renamed .env to .env.sops, updated .envrc and gitignore to reflect changes

--- a/{{ cookiecutter.name }}/.envrc
+++ b/{{ cookiecutter.name }}/.envrc
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
-export $(sops -d --output-type dotenv .env | xargs)
+dotenv_if_exists
+export $(sops -d --output-type dotenv .env.sops | xargs)
 
 WORKDIR=$(CDPATH="cd -- $(dirname -- "$0")" && pwd -P)
 export WORKDIR
