renamed .env.sops to .sops.env and updated references in README.md and .envrc

--- a/{{ cookiecutter.name }}/.envrc
+++ b/{{ cookiecutter.name }}/.envrc
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 dotenv_if_exists
-export $(sops -d --output-type dotenv .env.sops | xargs)
+export $(sops -d .sops.env | xargs)
 
 WORKDIR=$(CDPATH="cd -- $(dirname -- "$0")" && pwd -P)
 export WORKDIR
