updated readme documentation, removed .sops.env file, modified .envrc, added .envrc to workspaces

--- a/{{ cookiecutter.name }}/.envrc
+++ b/{{ cookiecutter.name }}/.envrc
@@ -1,7 +1,5 @@
-#!/usr/bin/env bash
-
+### shell #####################################################################
 dotenv_if_exists
-export $(sops -d .sops.env | xargs)
 
 WORKDIR=$(CDPATH="cd -- $(dirname -- "$0")" && pwd -P)
 export WORKDIR
