added bash shebang and section comments, moved tf_data_dir export, enforced aws_profile env variable

--- a/{{ cookiecutter.name }}/.envrc
+++ b/{{ cookiecutter.name }}/.envrc
@@ -1,4 +1,6 @@
-### shell #####################################################################
+#!/usr/bin/env bash
+
+### direnv ####################################################################
 dotenv_if_exists
 
 WORKDIR=$(CDPATH="cd -- $(dirname -- "$0")" && pwd -P)
