--- a/{{ cookiecutter.name }}/workspaces/{{ cookiecutter.name }}-2/.envrc
+++ b/{{ cookiecutter.name }}/workspaces/{{ cookiecutter.name }}-2/.envrc
@@ -1,5 +1,9 @@
+#!/usr/bin/env bash
+
+### direnv ####################################################################
 source_up
 dotenv_if_exists
 
+### terraform #################################################################
 export TF_DATA_DIR="$PWD/.terraform"
-# env_vars_required AWS_PROFILE
+env_vars_required AWS_PROFILE
