--- a/{{ cookiecutter.name }}/workspaces/{{ cookiecutter.name }}-1/.envrc
+++ b/{{ cookiecutter.name }}/workspaces/{{ cookiecutter.name }}-1/.envrc
@@ -1,5 +1,10 @@
+#!/usr/bin/env bash
+
+### direnv ####################################################################
 source_up
 dotenv_if_exists
 
-export TF_DATA_DIR="$PWD/.terraform"
 # env_vars_required AWS_PROFILE
+
+### terraform #################################################################
+export TF_DATA_DIR="$PWD/.terraform"
