--- a/{{ cookiecutter.name }}/workspaces/{{ cookiecutter.name }}-2/.envrc
+++ b/{{ cookiecutter.name }}/workspaces/{{ cookiecutter.name }}-2/.envrc
@@ -4,6 +4,7 @@
 source_up
 dotenv_if_exists
 
+# env_vars_required AWS_PROFILE
+
 ### terraform #################################################################
 export TF_DATA_DIR="$PWD/.terraform"
-env_vars_required AWS_PROFILE
