updated github actions to trigger on pull requests and pushes to main branch

--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -1,7 +1,12 @@
 name: Github Release
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
+    branches:
+      - main
     tags:
       - "v*.*.*"
 
